Improve the generator